--- a/package.json
+++ b/package.json
@@ -18,19 +18,21 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^3.5.0",
     "@uploadthing/react": "^6.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.390.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "stripe": "^15.10.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
